# kv-rs

./: .gitignore  .kvcli_history  Cargo.toml  README.en.md  README.md  config
.kvcli/: kvcli.log.2025-11-04  kvcli.log.2025-11-05
benches/: bench.md
config/: kvdb.default.yaml  kvdb.yaml
doc/: configuration.en.md  configuration.md  kvcli-v0.0.2 演示视频.webm
doc/kv/: log_storage_layout.md
example/: Cargo.toml
example/src/: main.rs
kv/: Cargo.toml
kv-cli/: Cargo.toml  config
kv-cli/examples/: args-main.rs  ctrlc-main.rs  signal-hook-main.rs
kv-cli/src/: child.rs  config.rs  emoji.rs  lib.rs  main.rs  new.rs  npm.rs  progressbar.rs  rusty.rs  session.rs  show.rs  trace.rs
kv-cli/src/ast/: mod.rs  token_kind.rs  tokenizer.rs
kv-cli/src/command/: login.rs  mod.rs
kv-cli/src/server/: config.rs  mod.rs  session.rs
kv-cli/storage/: kvdb
kv-cli/tests/: README.md  cli.rs  config_tests.rs  encoding_integration_tests.rs  session_tests.rs
kv/benches/: bench_main.rs  encoding_benchmarks.rs
kv/src/: error.rs  info.rs  lib.rs
kv/src/codec/: bytes_codec.rs  bytes_codec2.rs  mod.rs
kv/src/encoding/: base64_codec.rs  format_detector.rs  hex_codec.rs  json_codec.rs  mod.rs
kv/src/mvcc/: mod.rs  mvcc.rs  scan.rs  transaction.rs  transaction_test.rs
kv/src/row/: mod.rs  rows.rs
kv/src/storage/: engine.rs  log.rs  log_cask.rs  mani_fest_cstore.rs  memory.rs  mod.rs
src/: lib.rs
src/codec/: bytes_codec.rs  bytes_codec2.rs  json_codec.rs  keycodec.rs  mod.rs
src/log/: log_cask.rs  mod.rs
src/mvcc/: mod.rs
src/storage/: engine.rs  log_cask.rs  memory.rs  mod.rs
storage/: kvdb
