[package]
name = "kv-rs"
description = "A distributed kv storage"
version = "0.0.2"
authors = ["fengyang <yueny09@163.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://gitee.com/yueny/kv-rs"
#homepage = ""
documentation = "https://docs.rs/kv-rs"
keywords = ["kv"]
#categories = ["algorithms", "no-std"]
# 该publish字段可用于防止包被错误地发布到包注册表（如crates.io），例如将包在公司中保持私有。
publish = true
autobenches = true
include = ["src/", "LICENSE-*", "README.md", "README.en.md", "CHANGELOG.md", "COPYRIGHT"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench_main"
harness = false

[dependencies]
clap = { version = "~4.4.2", features = ["cargo"] }
log = "~0.4.14"
bincode = "~1.3.3"
serde =  { version = "~1.0.126", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "~0.11.12"
serde_derive = "~1.0.126"
bytes = "1.5.0"
byteorder = "1.5.0"
rand = "~0.8.3"
fs4 = "~0.7.0"
tokio = { version = "~1.35.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "sync",
] }
tokio-serde = { version = "~0.8", features = ["bincode"] }
tokio-stream = { version = "~0.1.6", features = ["net"] }
tokio-util = { version = "~0.7.8", features = ["codec"] }
whosly = "0.1.6"

[dev-dependencies]
hex = "~0.4.3"
paste = "~1.0.14"
pretty_assertions = "~1.4.0"
serial_test = "~2.0.0"
tempdir = "~0.3.7"
tempfile = "~3.9.0"
# for bench
criterion = "0.5.1"
gnuplot = "0.0.42"

[profile.dev]
lto = true
opt-level = 0
debug = 2
overflow-checks = false
codegen-units = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
