[workspace]
members = [
    "./kv",
    "./kv-cli",
    "example",
]

[workspace.package]
version = "0.0.3"
description = "A distributed kv storage"
authors = ["fengyang <yueny09@163.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://gitee.com/yueny/kv-rs"
#homepage = ""
documentation = "https://docs.rs/kv-rs"
# 该publish字段可用于防止包被错误地发布到包注册表（如crates.io），例如将包在公司中保持私有。
publish = true
autobenches = true
include = ["src/", "LICENSE-*", "README.md", "README.en.md", "CHANGELOG.md", "COPYRIGHT"]

[workspace.dependencies]
kv-rs = { path = "kv", version = "0.0.3" }

#错误处理
anyhow = "1.0.63"
bincode = "~1.3.3"
bytes = "1.5.0"
byteorder = "1.5.0"
# 时间操作
chrono = { version = "0.4.31", default-features = false, features = ["clock"] }
# CLI 命令行解析
clap = { version = "~4.4.2", features = ["cargo", "derive", "env"] }
# config 配置加载
confy = {version = "0.6.0"}
#终端多彩显示
colored = "2.0.0"
# 显示进度条
indicatif = "0.17.8"
log = "0.4"
logos = "0.13"
#json格式化
jsonxf = "1.1.1"
#处理mime类型
mime = "0.3.16"
#http请求
reqwest = {version = "0.11.11",features = ["json"]}
# CLI 命令行解析
structopt = "0.3.13"
tracing-appender = "0.2"
fern = { version = "0.6", features = ["colored"] }
serde =  { version = "~1.0.126", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "~0.11.12"
serde_derive = "~1.0.126"
rand = "~0.8.3"
fs4 = "~0.7.0"
tokio = { version = "~1.35.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "io-util",
    "time",
    "sync",
] }
tokio-serde = { version = "~0.8", features = ["bincode"] }
tokio-stream = { version = "~0.1.6", features = ["net"] }
tokio-util = { version = "~0.7.8", features = ["codec"] }
fs_extra = "1.3"
whosly = "0.1.8"
sqlformat = "0.2"
strum = "0.25"
strum_macros = "0.25"

# dev
hex = "~0.4.3"
paste = "~1.0.14"
pretty_assertions = "~1.4.0"
serial_test = "~2.0.0"
tempdir = "~0.3.7"
tempfile = "~3.9.0"
# for bench
criterion = "0.5.1"
gnuplot = "0.0.42"
assert_cmd = "1.0.8"
predicates = "2.1.5"
assert_fs = "1.1.1"

[profile.dev]
lto = true
opt-level = 0
debug = 2
overflow-checks = false
codegen-units = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
