[package]
name = "example"
version = { workspace = true }
description = "A distributed kv storage example"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kv-rs = { workspace = true }
tempdir = { workspace = true }
