[package]
name = "kv-rs"
keywords = ["kv", "kv_rs"]
version = { workspace = true }
description = "A distributed kv storage core"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "bench_main"
harness = false

[dependencies]
log = { workspace = true }
bincode = { workspace = true }
config = { workspace = true }
serde =  { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
serde_derive = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
rand = { workspace = true }
fs4 = { workspace = true }
tokio = { workspace = true }
tokio-serde = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
fs_extra = { workspace = true }
whosly = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
paste = { workspace = true }
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
tempdir = { workspace = true }
# for bench
criterion = { workspace = true }
gnuplot = { workspace = true }
